k3s/db/pg-admin/base/svc.yaml
apiVersion: v1
kind: Service
# https://kubernetes.io/docs/tutorials/kubernetes-basics/expose/expose-intro/
# https://kubernetes.io/docs/concepts/services-networking/service/
# https://v1-30.docs.kubernetes.io/docs/reference/kubernetes-api/service-resources/service-v1/
# https://www.youtube.com/watch?v=T4Z7visMM4E
metadata:
  name: cluster-ip
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - name: web
      port: 80
      targetPort: web

#  name: pgadmin-balancer
#spec:
#  type: LoadBalancer
  #loadBalancerIP: "192.168.2.232"
#  ports:
#    - protocol: TCP
#      name: port
#      port: 30100
#      targetPort: 80
