k3s/db/pg-admin/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
spec:
  ingressClassName: nginx
  rules: # https://kubernetes.github.io/ingress-nginx/user-guide/ingress-path-matching/
    - host: pgadmin.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cluster-ip
              port:
                name: web
